--- a/ur_with_linear_slider_bringup/CMakeLists.txt
+++ b/ur_with_linear_slider_bringup/CMakeLists.txt
@@ -7,20 +7,32 @@ endif()
 
 # find dependencies
 find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(rclpy REQUIRED)
 find_package(linear_slider_description REQUIRED)
 find_package(ur_description REQUIRED)
-
 find_package(xacro REQUIRED)
 find_package(urdf REQUIRED)
 # find_package(rviz REQUIRED)
 
+# Install Python modules
+ament_python_install_package(${PROJECT_NAME})
+
 install(
   DIRECTORY
-    urdf
-    rviz
-    launch
     config
+    launch
+    rviz
+    scripts
+    urdf
   DESTINATION share/${PROJECT_NAME}
+)
+
+# Install Python executables
+install(
+  PROGRAMS
+  scripts/user_control_node.py
+  DESTINATION lib/${PROJECT_NAME}
 )
 
 if(BUILD_TESTING)
