--- a/ur_with_linear_slider_bringup/config/system_controllers.yaml
+++ b/ur_with_linear_slider_bringup/config/system_controllers.yaml
@@ -1,54 +1,54 @@
 controller_manager:
-  ros__parameters:
-    update_rate: 2000 # hz
+    ros__parameters:
+        update_rate: 2000 # hz
 
-    limit_switch_state_broadcaster:
-      type: linear_slider_controllers/LimitSwitchStateBroadcaster
+        limit_switch_state_broadcaster:
+            type: linear_slider_controllers/LimitSwitchStateBroadcaster
 
-    linear_slider_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
-      # TODO: Therefore if the hardware provides only acceleration or velocity states they have to be integrated in the hardware-interface implementation of velocity and position to use these controllers.
+        linear_slider_controller:
+            type: joint_trajectory_controller/JointTrajectoryController
+            # TODO: Therefore if the hardware provides only acceleration or velocity states they have to be integrated in the hardware-interface implementation of velocity and position to use these controllers.
 
-    joint_state_broadcaster:
-      type: joint_state_broadcaster/JointStateBroadcaster
+        joint_state_broadcaster:
+            type: joint_state_broadcaster/JointStateBroadcaster
 
-    joint_trajectory_controller:
-      type: joint_trajectory_controller/JointTrajectoryController
+        joint_trajectory_controller:
+            type: joint_trajectory_controller/JointTrajectoryController
 
-    scaled_joint_trajectory_controller:
-      type: ur_controllers/ScaledJointTrajectoryController
+        scaled_joint_trajectory_controller:
+            type: ur_controllers/ScaledJointTrajectoryController
 
-    forward_velocity_controller:
-      type: velocity_controllers/JointGroupVelocityController
+        forward_velocity_controller:
+            type: velocity_controllers/JointGroupVelocityController
 
-    forward_position_controller:
-      type: position_controllers/JointGroupPositionController
+        forward_position_controller:
+            type: position_controllers/JointGroupPositionController
 
-    io_and_status_controller:
-      type: ur_controllers/GPIOController
+        io_and_status_controller:
+            type: ur_controllers/GPIOController
 
-    speed_scaling_state_broadcaster:
-      type: ur_controllers/SpeedScalingStateBroadcaster
+        speed_scaling_state_broadcaster:
+            type: ur_controllers/SpeedScalingStateBroadcaster
 
-    force_torque_sensor_broadcaster:
-      type: force_torque_sensor_broadcaster/ForceTorqueSensorBroadcaster
+        force_torque_sensor_broadcaster:
+            type: force_torque_sensor_broadcaster/ForceTorqueSensorBroadcaster
 
 joint_state_broadcaster:
-  ros__parameters:
-    joints:
-      - $(var prefix)joint1
-      - $(var tf_prefix)shoulder_pan_joint
-      - $(var tf_prefix)shoulder_lift_joint
-      - $(var tf_prefix)elbow_joint
-      - $(var tf_prefix)wrist_1_joint
-      - $(var tf_prefix)wrist_2_joint
-      - $(var tf_prefix)wrist_3_joint
-    
+    ros__parameters:
+        joints:
+            - $(var prefix)joint1
+            - $(var tf_prefix)shoulder_pan_joint
+            - $(var tf_prefix)shoulder_lift_joint
+            - $(var tf_prefix)elbow_joint
+            - $(var tf_prefix)wrist_1_joint
+            - $(var tf_prefix)wrist_2_joint
+            - $(var tf_prefix)wrist_3_joint
+
 limit_switch_state_broadcaster:
-  ros__parameters:
-    state_interfaces:
-      - $(var prefix)lim_switch_neg/state
-      - $(var prefix)lim_switch_pos/state
+    ros__parameters:
+        state_interfaces:
+            - $(var prefix)lim_switch_neg/state
+            - $(var prefix)lim_switch_pos/state
 
 # Linear slider controller # TODO: Load this in from linear_slider package?
 linear_slider_controller:
@@ -67,9 +67,9 @@ linear_slider_controller:
             $(var prefix)joint1:
                 ff_velocity_scale: 1.0
                 # # Mock hardware + UR5e
-                # p: 100.0
-                # i: 0.0
-                # d: 0.0
+                p: 100.0
+                i: 0.0
+                d: 0.0
                 # MOCK HARDWARE  --   TODO: Is this different because of the lack of a transmission interface? The mass of the moving base becomes less significant with our ball screw, which isn't modeled in the URDF.
                 # p: 1000.0
                 # i: 10.0
@@ -80,10 +80,10 @@ linear_slider_controller:
                 # i: 2.0
                 # d: 2.0
 
-                p: 10.0
-                i: 2.0
-                d: 5.0
-                # i_clamp: 1.0
+                # p: 10.0
+                # i: 2.0
+                # d: 5.0
+                # # i_clamp: 1.0
 
         state_publish_rate: 100.0 # defaults to 50
         action_monitor_rate: 50.0 # defaults to 20
@@ -101,100 +101,100 @@ linear_slider_controller:
 
 # UR Controllers
 joint_trajectory_controller:
-  ros__parameters:
-    joints:
-      - $(var tf_prefix)shoulder_pan_joint
-      - $(var tf_prefix)shoulder_lift_joint
-      - $(var tf_prefix)elbow_joint
-      - $(var tf_prefix)wrist_1_joint
-      - $(var tf_prefix)wrist_2_joint
-      - $(var tf_prefix)wrist_3_joint
-    command_interfaces:
-      - position
-    state_interfaces:
-      - position
-      - velocity
-    state_publish_rate: 100.0
-    action_monitor_rate: 20.0
-    allow_partial_joints_goal: false
-    constraints:
-      stopped_velocity_tolerance: 0.2
-      goal_time: 0.0
-      $(var tf_prefix)shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)elbow_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
+    ros__parameters:
+        joints:
+            - $(var tf_prefix)shoulder_pan_joint
+            - $(var tf_prefix)shoulder_lift_joint
+            - $(var tf_prefix)elbow_joint
+            - $(var tf_prefix)wrist_1_joint
+            - $(var tf_prefix)wrist_2_joint
+            - $(var tf_prefix)wrist_3_joint
+        command_interfaces:
+            - position
+        state_interfaces:
+            - position
+            - velocity
+        state_publish_rate: 100.0
+        action_monitor_rate: 20.0
+        allow_partial_joints_goal: false
+        constraints:
+            stopped_velocity_tolerance: 0.2
+            goal_time: 0.0
+            $(var tf_prefix)shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)elbow_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
 
 scaled_joint_trajectory_controller:
-  ros__parameters:
-    joints:
-      - $(var tf_prefix)shoulder_pan_joint
-      - $(var tf_prefix)shoulder_lift_joint
-      - $(var tf_prefix)elbow_joint
-      - $(var tf_prefix)wrist_1_joint
-      - $(var tf_prefix)wrist_2_joint
-      - $(var tf_prefix)wrist_3_joint
-    command_interfaces:
-      - position
-    state_interfaces:
-      - position
-      - velocity
-    state_publish_rate: 100.0
-    action_monitor_rate: 20.0
-    allow_partial_joints_goal: false
-    constraints:
-      stopped_velocity_tolerance: 0.2
-      goal_time: 0.0
-      $(var tf_prefix)shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)elbow_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
-      $(var tf_prefix)wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
-    speed_scaling_interface_name: $(var tf_prefix)speed_scaling/speed_scaling_factor
+    ros__parameters:
+        joints:
+            - $(var tf_prefix)shoulder_pan_joint
+            - $(var tf_prefix)shoulder_lift_joint
+            - $(var tf_prefix)elbow_joint
+            - $(var tf_prefix)wrist_1_joint
+            - $(var tf_prefix)wrist_2_joint
+            - $(var tf_prefix)wrist_3_joint
+        command_interfaces:
+            - position
+        state_interfaces:
+            - position
+            - velocity
+        state_publish_rate: 100.0
+        action_monitor_rate: 20.0
+        allow_partial_joints_goal: false
+        constraints:
+            stopped_velocity_tolerance: 0.2
+            goal_time: 0.0
+            $(var tf_prefix)shoulder_pan_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)shoulder_lift_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)elbow_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)wrist_1_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)wrist_2_joint: { trajectory: 0.2, goal: 0.1 }
+            $(var tf_prefix)wrist_3_joint: { trajectory: 0.2, goal: 0.1 }
+        speed_scaling_interface_name: $(var tf_prefix)speed_scaling/speed_scaling_factor
 
 forward_velocity_controller:
-  ros__parameters:
-    joints:
-      - $(var tf_prefix)shoulder_pan_joint
-      - $(var tf_prefix)shoulder_lift_joint
-      - $(var tf_prefix)elbow_joint
-      - $(var tf_prefix)wrist_1_joint
-      - $(var tf_prefix)wrist_2_joint
-      - $(var tf_prefix)wrist_3_joint
-    interface_name: velocity
+    ros__parameters:
+        joints:
+            - $(var tf_prefix)shoulder_pan_joint
+            - $(var tf_prefix)shoulder_lift_joint
+            - $(var tf_prefix)elbow_joint
+            - $(var tf_prefix)wrist_1_joint
+            - $(var tf_prefix)wrist_2_joint
+            - $(var tf_prefix)wrist_3_joint
+        interface_name: velocity
 
 forward_position_controller:
-  ros__parameters:
-    joints:
-      - $(var tf_prefix)shoulder_pan_joint
-      - $(var tf_prefix)shoulder_lift_joint
-      - $(var tf_prefix)elbow_joint
-      - $(var tf_prefix)wrist_1_joint
-      - $(var tf_prefix)wrist_2_joint
-      - $(var tf_prefix)wrist_3_joint
+    ros__parameters:
+        joints:
+            - $(var tf_prefix)shoulder_pan_joint
+            - $(var tf_prefix)shoulder_lift_joint
+            - $(var tf_prefix)elbow_joint
+            - $(var tf_prefix)wrist_1_joint
+            - $(var tf_prefix)wrist_2_joint
+            - $(var tf_prefix)wrist_3_joint
 
 io_and_status_controller:
-  ros__parameters:
-    tf_prefix: "$(var tf_prefix)"
+    ros__parameters:
+        tf_prefix: "$(var tf_prefix)"
 
 # UR broadcasters
 speed_scaling_state_broadcaster:
-  ros__parameters:
-    state_publish_rate: 100.0
-    tf_prefix: "$(var tf_prefix)"
+    ros__parameters:
+        state_publish_rate: 100.0
+        tf_prefix: "$(var tf_prefix)"
 
 force_torque_sensor_broadcaster:
-  ros__parameters:
-    sensor_name: $(var tf_prefix)tcp_fts_sensor
-    state_interface_names:
-      - force.x
-      - force.y
-      - force.z
-      - torque.x
-      - torque.y
-      - torque.z
-    frame_id: $(var tf_prefix)tool0
-    topic_name: ft_data
+    ros__parameters:
+        sensor_name: $(var tf_prefix)tcp_fts_sensor
+        state_interface_names:
+            - force.x
+            - force.y
+            - force.z
+            - torque.x
+            - torque.y
+            - torque.z
+        frame_id: $(var tf_prefix)tool0
+        topic_name: ft_data
