--- a/ur_with_linear_slider_moveit_config/config/initial_positions.yaml
+++ b/ur_with_linear_slider_moveit_config/config/initial_positions.yaml
@@ -1,10 +1,17 @@
 # Default initial positions for ur_with_linear_slider's ros2_control fake system
 
-initial_positions:
-  $(var prefix)joint1: -0.4
-  $(var tf_prefix)elbow_joint: 0
-  $(var tf_prefix)shoulder_lift_joint: 0
-  $(var tf_prefix)shoulder_pan_joint: 0
-  $(var tf_prefix)wrist_1_joint: 0
-  $(var tf_prefix)wrist_2_joint: 0
-  $(var tf_prefix)wrist_3_joint: 0
+# initial_positions:
+$(var prefix)joint1: -0.4
+elbow_joint: 1.158 # 0
+shoulder_lift_joint: -0.953 #-65
+shoulder_pan_joint: 1.906 # 135
+wrist_1_joint: -1.912 # 110
+wrist_2_joint: -1.765 # 90
+wrist_3_joint: 0.0
+    
+    # elbow_joint: 1.158
+    # shoulder_lift_joint: -0.953
+    # shoulder_pan_joint: 1.906
+    # wrist_1_joint: -1.912
+    # wrist_2_joint: -1.765
+    # wrist_3_joint: 0.0
