--- a/ur_with_linear_slider_moveit_config/config/joint_limits.yaml
+++ b/ur_with_linear_slider_moveit_config/config/joint_limits.yaml
@@ -2,50 +2,48 @@
 
 # For beginners, we downscale velocity and acceleration limits.
 # You can always specify higher scaling factors (<= 1.0) in your motion requests.  # Increase the values below to 1.0 to always move at maximum speed.
-# default_velocity_scaling_factor: 0.4
-# default_acceleration_scaling_factor: 0.4
+default_velocity_scaling_factor: 0.1
+default_acceleration_scaling_factor: 0.1
 
 # Specific joint properties can be changed with the keys [max_position, min_position, max_velocity, max_acceleration]
 # Joint limits can be turned off with [has_velocity_limits, has_acceleration_limits]
 joint_limits:
-  $(var prefix)joint1:
-    default_velocity_scaling_factor: 0.4
-    default_acceleration_scaling_factor: 0.4
-    max_position: 0.4
-    min_position: -0.4
-    has_velocity_limits: true
-    max_velocity: 0.5
-    has_acceleration_limits: true
-    max_acceleration: 0.2
-    has_jerk_limits: true
-    max_jerk: 10.0
-  $(var tf_prefix)elbow_joint:
-    has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
-  $(var tf_prefix)shoulder_lift_joint:
-    has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
-  $(var tf_prefix)shoulder_pan_joint:
-    has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
-  $(var tf_prefix)wrist_1_joint:
-    has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
-  $(var tf_prefix)wrist_2_joint:
-    has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
-  $(var tf_prefix)wrist_3_joint:
-    has_velocity_limits: true
-    max_velocity: 3.1415926535897931
-    has_acceleration_limits: false
-    max_acceleration: 0
+    $(var prefix)joint1:
+        max_position: 0.4
+        min_position: -0.4
+        has_velocity_limits: true
+        max_velocity: 0.08333333333333334 # 1000 rpm for the servo motor. See ClearPath datasheet for speed limits.
+        has_acceleration_limits: true
+        max_acceleration: 0.2
+        has_jerk_limits: true
+        max_jerk: 10.0
+    $(var tf_prefix)elbow_joint:
+        has_velocity_limits: true
+        max_velocity: 3.1415926535897931
+        has_acceleration_limits: false
+        max_acceleration: 0
+    $(var tf_prefix)shoulder_lift_joint:
+        has_velocity_limits: true
+        max_velocity: 3.1415926535897931
+        has_acceleration_limits: false
+        max_acceleration: 0
+    $(var tf_prefix)shoulder_pan_joint:
+        has_velocity_limits: true
+        max_velocity: 3.1415926535897931
+        has_acceleration_limits: false
+        max_acceleration: 0
+    $(var tf_prefix)wrist_1_joint:
+        has_velocity_limits: true
+        max_velocity: 3.1415926535897931
+        has_acceleration_limits: false
+        max_acceleration: 0
+    $(var tf_prefix)wrist_2_joint:
+        has_velocity_limits: true
+        max_velocity: 3.1415926535897931
+        has_acceleration_limits: false
+        max_acceleration: 0
+    $(var tf_prefix)wrist_3_joint:
+        has_velocity_limits: true
+        max_velocity: 3.1415926535897931
+        has_acceleration_limits: false
+        max_acceleration: 0
